[package]
name = "hyper-bench"
version = "1.0.0"
edition = "2024"
authors = [
    "Glauco Pacheco <glauco@kourier.io>"
]

[[bin]]
name = "hyper-bench"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
http-body-util = "0.1"
bytes = "1.10.0"
hyper-util = { version = "0.1.10", features = ["full"] }
log = { version = "0.4.26", features = ["release_max_level_off"] }


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
