# Copyright (C) 2026 Glauco Pacheco <glaucopacheco@gmail.com>
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(SettingsFromCmdLineTestApp)
add_subdirectory(SpectatorKeepsVisitingLeafNodeOfScenarioPathUntilExhaustingDataOfAllGeneratorsOnPathTestApp)
add_subdirectory(SpectatorStoresScenariosTestApp)
add_subdirectory(SpectatorSupportsInfoMessagesOutsideScenarioScopeTestApp)
add_subdirectory(SpectatorSupportsRequireOutsideScenarioScopeTestApp)
add_subdirectory(SpectatorVisitsAllLeafNodesOfScenarioPathWithoutGeneratorsOnceTestApp)
add_subdirectory(SpectatorOutputsAllScenarioPathsRanTestApp)
add_subdirectory(SpectatorRunsAllScenariosOnSingleThreadByDefaultTestApp)
add_subdirectory(SpectatorSupportsRunningScenariosOnMultipleThreadsTestApp)
add_subdirectory(SpectatorSupportsScenarioFilteringTestApp)
